--- a/styles/about_style.css
+++ b/styles/about_style.css
@@ -19,10 +19,16 @@
 
 .bio-card-label{
     display: inline;
+    font-weight: bold;
 }
 
 p{
     display: inline-block;
+    font-size: 1rem;
+}
+
+li {
+    font-size: 1rem;
 }
 
 .bio-description{
@@ -49,6 +55,11 @@ i{
     background-color: #CCE8CF;
 }
 
+.bio-title{
+    font-size: 2rem;
+    font-weight: bold;
+}
+
 @media only screen and (max-width: 767px){
 
     .row{
@@ -61,4 +72,7 @@ i{
         padding: 0 3%;
     }
     
+    .carousel-inner{
+        height: 600px;
+    }
 }
